--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,9 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:1.2.0"
     implementation "androidx.compose.ui:ui-tooling-preview:1.2.0"
+
+    // View Model
+    def lifecycle_version = "2.5.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    implementation "androidx.activity:activity-ktx:1.5.1"
 }
