second commit. Create new post fixed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,10 @@
 
         </activity>
 
+        <activity android:name=".activity.NewPostActivity"
+            android:exported="false">
+        </activity>
+
     </application>
 
 </manifest>
