--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="ru.netology.nmedia" >
+<application
 
-    <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -21,9 +21,14 @@
             android:theme="@style/Theme.NMedia" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <data android:scheme="*"/>
+            </intent-filter>
+
         </activity>
 
         <activity android:name=".activity.ShareActivity"
@@ -42,6 +47,17 @@
             android:windowSoftInputMode="adjustResize">
         </activity>
 
-    </application>
+    <activity android:name=".activity.PostVideoActivity"
+        android:exported="true">
 
+        <intent-filter>
+            <data android:scheme="*" />
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.DEFAULT"/>
+            <data android:mimeType="text/plain"/>
+        </intent-filter>
+
+    </activity>
+
+    </application>
 </manifest>
