--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.6.21'
 }
 
 android {
@@ -78,4 +79,7 @@ dependencies {
     // Material Design
 
     implementation "com.google.android.material:material:1.6.1"
+
+    // JSON
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
 }
