--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,9 @@ dependencies {
 
     implementation "com.google.android.material:material:1.6.1"
 
-    // JSON
+    // kotlin-serialization
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
+
+    // GSON
+    implementation "com.google.code.gson:gson:2.9.0"
 }
