--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,7 @@ dependencies {
 
     // GSON
     implementation "com.google.code.gson:gson:2.9.0"
+
+    // Fragments
+    implementation "androidx.fragment:fragment-ktx:1.5.3"
 }
